jEdit 5.3 version history
       (changes since jEdit 5.2.0)
:encoding=UTF-8:

{{{ Version 5.3pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Makarius, Jakub Holý,
Mark Corbin, Matt Galligan, Kevin Hunter Kesling, Darien Brown,
Matthieu Casanova, Sergey Mashkov, Dale Anson, Kevin Leblanc,
Marcelo Vanzin, Jordan Miner, yaraba, and Eric Le Lay for contributing
to this release.

{{{ Bug Fixes

- More accurate wrap margin calculation (Patch#555 - Makarius)

- Fix AWT thread-safety issue in VFSManager.error(). (Marcelo Vanzin)

- Order of unsorted buffers now preserved in View.getBuffers()
  (Patch # 548 - Kevin Leblanc)

- Support for negative line spacing (Patch #535 - Makarius)

- Fix bug #3671: autodetect text file encoding in HelpViewer
  (patch #540 - Eric Le Lay)

}}}
{{{ UI Improvements

- More font size choices for 4K and higher-res displays (Patch# 549 - Makarius)

- EOL marker character is a localizable property (view.eolMarkerChar),
  and an arrow (↩) instead of period (.) (#3902 - Alan Ezust)

- Proper button margins for Nimbus L&F (Patch #538 - Makarius)

- Floating dockables as JDialog (Patch #537 - Makarius)

- CompletionPopup should accept TAB for completion selection
  (Patch # 525 - Jakub Holý)

- Separated sorting of Buffer Sets and Buffer Switcher (Dale Anson)

}}}
{{{ Miscellaneous

- New Korean translation file (Patch #551 - yaraba)

- Resize performance improvement (Patch #547 - Sergey Mashkov)

- Properties are sorted when saved (Feature Request #342, Patch #536 - Makarius)

- Configure the JUnit task to fork off the Ant process, with manually adding the
  needed Ant libraries. This ensures that there are no unwanted classpath
  entries during test execution (Plugin Bug #1732 - Björn "Vampire" Kautler)

}}}
{{{ API Changes

- View now sends ViewUpdate message on EditBus when full screen mode is toggled.
  This is useful to plugins that may need to adjust their appearance when the
  screen mode is toggled. (Dale Anson)
